{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 39,
  "lineage": "1bce7552-99b5-36a1-caeb-31b1c2b42242",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:security-group/sg-08231ec5a09c06242",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08231ec5a09c06242",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow mysql connectivity to ALL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "139592438054",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f69f76d176674cdf",
            "id": "r-rtb-0dd4e0fb8e235fb481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd4e0fb8e235fb48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_route_table.eks_route_tbl",
            "module.vpc.aws_internet_gateway.main_vpc_gw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_tbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:route-table/rtb-0dd4e0fb8e235fb48",
            "id": "rtb-0dd4e0fb8e235fb48",
            "owner_id": "139592438054",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-route-table"
            },
            "tags_all": {
              "Name": "eks-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_subnet_rt_associattion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fabeb4a00bbe844",
            "route_table_id": "rtb-0dd4e0fb8e235fb48",
            "subnet_id": "subnet-0ba64c084258c561d"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.eks.aws_route_table.eks_route_tbl",
            "module.eks.aws_subnet.eks_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026f1aab76fd029e1",
            "route_table_id": "rtb-0dd4e0fb8e235fb48",
            "subnet_id": "subnet-0593683053b351003"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.eks.aws_route_table.eks_route_tbl",
            "module.eks.aws_subnet.eks_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:subnet/subnet-0ba64c084258c561d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ba64c084258c561d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "139592438054",
            "tags": {
              "Name": "subnet-eks-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "subnet-eks-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:subnet/subnet-0593683053b351003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0593683053b351003",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "139592438054",
            "tags": {
              "Name": "subnet-eks-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "subnet-eks-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_vpc_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:internet-gateway/igw-0f69f76d176674cdf",
            "id": "igw-0f69f76d176674cdf",
            "owner_id": "139592438054",
            "tags": {
              "Name": "main-vpc-gw"
            },
            "tags_all": {
              "Name": "main-vpc-gw"
            },
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f69f76d176674cdf",
            "id": "r-rtb-08aef1033d27b8dd21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08aef1033d27b8dd2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_vpc_gw",
            "module.vpc.aws_route_table.pub_route_tbl",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_tbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:route-table/rtb-08aef1033d27b8dd2",
            "id": "rtb-08aef1033d27b8dd2",
            "owner_id": "139592438054",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pub-route-table"
            },
            "tags_all": {
              "Name": "pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_rt_associattion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2b7dee4920024c2",
            "route_table_id": "rtb-08aef1033d27b8dd2",
            "subnet_id": "subnet-059e8273ad9858fca"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.vpc.aws_route_table.pub_route_tbl",
            "module.vpc.aws_subnet.pub_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f01e91e3a2ff1ea",
            "route_table_id": "rtb-08aef1033d27b8dd2",
            "subnet_id": "subnet-003ddb869054c9e2b"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.vpc.aws_route_table.pub_route_tbl",
            "module.vpc.aws_subnet.pub_subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:security-group/sg-0163e68447ae5d302",
            "description": "Security group for public ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0163e68447ae5d302",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pub-alb-sg",
            "name_prefix": "",
            "owner_id": "139592438054",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-alb-sg"
            },
            "tags_all": {
              "Name": "pub-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:subnet/subnet-059e8273ad9858fca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-059e8273ad9858fca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139592438054",
            "tags": {
              "Name": "subnet-ui-2a"
            },
            "tags_all": {
              "Name": "subnet-ui-2a"
            },
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:subnet/subnet-003ddb869054c9e2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-003ddb869054c9e2b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139592438054",
            "tags": {
              "Name": "subnet-ui-2b"
            },
            "tags_all": {
              "Name": "subnet-ui-2b"
            },
            "vpc_id": "vpc-052c3ce93d2af1a6f"
          },
          "dependencies": [
            "data.aws_availability_zones.current_azs",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:139592438054:vpc/vpc-052c3ce93d2af1a6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08238d6b1468fe401",
            "default_route_table_id": "rtb-0183f640da2be2974",
            "default_security_group_id": "sg-040190f2fa59b8b17",
            "dhcp_options_id": "dopt-e3d4ac9b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-052c3ce93d2af1a6f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0183f640da2be2974",
            "owner_id": "139592438054",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}